API Delete User
